<resources>
    <string name="app_name">Precifica App!</string>

    <string name="blackfishlabs">BLACKFISH LABS</string>
    <string name="blackfishlabs_website">blackfishlabs.com.br</string>
    <string name="description_about">APLICATIVOS E SOFTWARE SOB MEDIDA PARA NEGÓCIOS DIGITAIS</string>

    <string name="title_dashboard">Calcular Aplicativo</string>
    <string name="title_calc_hour">Calcular Hora</string>
    <string name="title_calc_project">Calcular Projeto</string>
    <string name="title_about_developer">Desenvolvedor</string>

    <string name="how_much">Quanto custa criar um aplicativo?</string>
    <string name="description_dash">Calcule rapidamente o custo da criação do seu Aplicativo respondendo algumas perguntas simples.</string>

    <!-- Step -->
    <string name="add_button_back_text">Anterior</string>
    <string name="add_button_next_text">Próximo</string>
    <string name="add_button_complete_text">Finalizar</string>

    <string name="app_calculate">Cálculo de Custo</string>
    <string name="select_one_answer">Selecione ao menos uma opção!</string>

    <string name="question_one">Qual o nível de qualidade você está procurando?</string>
    <string name="question_two">Qual tipo de aplicativo você precisa?</string>
    <string name="question_three">Qual aparência você deseja que o seu aplicativo tenha?</string>
    <string name="question_four">Qual retorno financeiro você deseja ter?</string>
    <string name="question_five">O seu aplicativo precisa de um sistema de login?</string>
    <string name="question_six">Seu aplicativo deve ser integrado à um website?</string>
    <string name="question_eight">Seu aplicativo necessita de um painel administrativo?</string>
    <string name="question_nine">Quantas línguas você deseja que seu aplicativo tenha?</string>

    <string name="afiliate_help">
        Se você precisa aceitar cartões no seu negócio a melhor opção são as maquininhas de cartões do Mercado Pago!
        \n\nClique na imagem para ser direcionado.\n
    </string>
    <string name="title_ads">Mercado Pago</string>

    <string name="title_hour_value">Valor da sua Hora</string>
    <string name="title_zero_money">R$0.00</string>
    <string name="title_hour_worked_in_day">Horas trabalhadas por dia</string>
    <string name="title_hour_worked_days">Quantos dias por semana</string>
    <string name="title_salary">Quanto quer ganhar por mês</string>
    <string name="title_salary_hour">Quanto você ganha por hora</string>
    <string name="title_worked_days">Quantos dias irá durar o projeto</string>
</resources>
