<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowBackground"
    tools:context=".ui.AboutFragment">

    <LinearLayout
        style="@style/ContainerLayout"
        android:gravity="top"
        android:layout_margin="@dimen/keyline_large">

        <TextView
            android:id="@+id/bfLabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blackfishlabs"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="52sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_about"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="@dimen/keyline_large" />

        <TextView
            android:id="@+id/bfWeSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/blackfishlabs_website"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</FrameLayout>